Replaced references to deprecated Integer constructor with Integer.valueOf