@@ -26,7 +26,7 @@ public class ShipTableModel extends XBTableModel{
 	}
 	void addTrack( ShipTrack track, int index ) {
 		tracks.add(track);
-		indices.add(new Integer(index));
+		indices.add(Integer.valueOf(index));
 		
 	}
 	void clearTracks() {
