@@ -138,8 +138,8 @@ public class RenderTools extends JPanel {
 				fire( new PropertyChangeEvent(
 					this, 
 					"STATE_CHANGE", 
-					(Object)(new Integer(0)), 
-					(Object)(new Integer(1)) 
+					(Object)(Integer.valueOf(0)), 
+					(Object)(Integer.valueOf(1)) 
 					));
 			}
 		};
