@@ -374,8 +374,8 @@ public class RenderingTools extends JPanel implements ActionListener {
 				fire( new PropertyChangeEvent(
 					this, 
 					"STATE_CHANGE", 
-					(Object)(new Integer(0)), 
-					(Object)(new Integer(1)) 
+					(Object)(Integer.valueOf(0)), 
+					(Object)(Integer.valueOf(1)) 
 					));
 			}
 		};
